# pic8-hal

./: .clang-format  .gitignore  AGENTS.md  LICENSE  README.md
pic16f87xa-hal/: CMakeLists.txt  MANUAL.md  README.md
pic16f87xa-hal/include/: pic16f87xa.h  pic16f87xa_sfr.h  pic16f87xa_sim.h  pic8_hal.h
pic16f87xa-hal/include/core/: hal_irq.h  hal_wdt_sleep.h  pic16_irq.h  pic16f87xa_harness.h  pic16f87xa_interrupt.h  pic16f87xa_wdt_sleep.h
pic16f87xa-hal/include/host/: pic16f87xa_platform.h
pic16f87xa-hal/include/peripherals/: hal_gpio.h  hal_timer0.h  hal_timer2.h  pic16f87xa_adc.h  pic16f87xa_ccp.h  pic16f87xa_comp.h  pic16f87xa_eeprom.h  pic16f87xa_gpio.h  pic16f87xa_psp.h  pic16f87xa_ssp.h  pic16f87xa_timer0.h  pic16f87xa_timer1.h  pic16f87xa_timer2.h  pic16f87xa_usart.h  pic16f87xa_vref.h
pic16f87xa-hal/mcu/pic16f87xa-mplabx/: Makefile  README.md
pic16f87xa-hal/src/core/: pic16_harness_sim.c  pic16_irq.c  pic16_irq_dispatch.c  pic16_isr_vector.c  pic16f87xa_harness_sim.c  pic16f87xa_harness_target.c  pic16f87xa_interrupt.c  pic16f87xa_irq_dispatch.c  pic16f87xa_isr_vector.c  pic16f87xa_wdt_sleep.c  pic16f87xa_wdt_sleep_sim.c  pic16f87xa_wdt_sleep_target.c
pic16f87xa-hal/src/peripherals/: pic16f87xa_adc.c  pic16f87xa_ccp.c  pic16f87xa_comp.c  pic16f87xa_eeprom.c  pic16f87xa_gpio.c  pic16f87xa_psp.c  (+6 more)
pic16f87xa-hal/tests/: example_adc.c  example_blink.c  example_ccp_pwm.c  example_comp_vref.c  example_eeprom.c  example_idle_blink.c  example_psp.c  example_rb_change.c  example_ssp.c  example_timer1.c  example_timer2.c  example_usart.c  example_wdt_sleep.c
pic16f87xa-taskmgr/: CMakeLists.txt  README.md
pic16f87xa-taskmgr/docs/: API.md  ARCHITECTURE.md
pic16f87xa-taskmgr/examples/: example_multi_blink.c
pic16f87xa-taskmgr/include/: task_manager.h
pic16f87xa-taskmgr/src/: task_manager.c
pic8-adcfilter/: CMakeLists.txt  README.md
pic8-adcfilter/docs/: API.md  ARCHITECTURE.md
pic8-adcfilter/examples/: example_adcfilter_hal.c
pic8-adcfilter/include/: pic8_adcfilter.h
pic8-adcfilter/mcu/: target_sizecheck.c
pic8-adcfilter/src/: pic8_adcfilter.c
pic8-adcfilter/tests/: test_adcfilter.c
pic8-bus/: CMakeLists.txt  README.md
pic8-bus/docs/: API.md  ARCHITECTURE.md
pic8-bus/examples/: example_bus.c  example_bus_target.c
pic8-bus/include/: pic8_bus.h
pic8-bus/src/: pic8_bus.c
pic8-console/: CMakeLists.txt  README.md
pic8-console/docs/: API.md  ARCHITECTURE.md
pic8-console/examples/: example_console.c
pic8-console/include/: pic8_console.h
pic8-console/mcu/: target_sizecheck.c
pic8-console/src/: pic8_console.c
pic8-console/tests/: test_console.c
pic8-debounce/: CMakeLists.txt  README.md
pic8-debounce/docs/: API.md  ARCHITECTURE.md
pic8-debounce/examples/: example_debounce_hal.c
pic8-debounce/include/: debounce.h
pic8-debounce/src/: debounce.c
pic8-debounce/tests/: test_debounce.c
pic8-encoder/: CMakeLists.txt  README.md
pic8-encoder/docs/: API.md  ARCHITECTURE.md
pic8-encoder/examples/: example_encoder_hal.c  example_encoder_pid_loop.c
pic8-encoder/include/: encoder.h
pic8-encoder/mcu/: target_sizecheck.c
pic8-encoder/src/: encoder.c
pic8-encoder/tests/: test_encoder.c
pic8-fsm/: CMakeLists.txt  README.md
pic8-fsm/docs/: API.md  ARCHITECTURE.md
pic8-fsm/examples/: example_taskmgr_integration.c  example_traffic_light.c
pic8-fsm/include/: fsm.h
pic8-fsm/mcu/: target_sizecheck.c
pic8-fsm/src/: fsm.c
pic8-fsm/tests/: test_fsm.c
pic8-lcd/: CMakeLists.txt  README.md
pic8-lcd/docs/: API.md  ARCHITECTURE.md
pic8-lcd/examples/: example_hd44780_hello.c
pic8-lcd/include/: pic8_lcd.h  pic8_lcd_transport.h
pic8-lcd/src/: pic8_lcd.c  pic8_lcd_gpio4.c  pic8_lcd_gpio8.c  pic8_lcd_spi.c
pic8-lcd/tests/: test_pic8_lcd.c
pic8-math/: CMakeLists.txt  README.md
pic8-math/docs/: API.md  ARCHITECTURE.md
pic8-math/include/: pic_math.h
pic8-math/tests/: golden_vectors.h  pic_math_test.h  target_selftest.c  target_smoke16.c  test_addsub.c  test_bcd.c  test_div.c  test_mul.c  test_numeric.c  test_rand.c  test_smoke.c  test_sqrt.c
pic8-math/tools/: gen_golden_vectors.c  gpsim_selftest.sh
pic8-modbus/: CMakeLists.txt  README.md
pic8-modbus/docs/: API.md  ARCHITECTURE.md
pic8-modbus/examples/: example_modbus.c  example_modbus_target.c
pic8-modbus/include/: pic8_modbus.h
pic8-modbus/src/: pic8_modbus.c
pic8-pid/: CMakeLists.txt  README.md
pic8-pid/docs/: API.md  ARCHITECTURE.md
pic8-pid/examples/: example_pid_setpoint_step.c
pic8-pid/include/: pid.h
pic8-pid/mcu/: target_sizecheck.c
pic8-pid/src/: pid.c
pic8-pid/tests/: test_pid.c
pic8-sdcard/: CMakeLists.txt  README.md
pic8-sdcard/docs/: API.md  ARCHITECTURE.md
pic8-sdcard/examples/: example_sdcard_dump.c
pic8-sdcard/include/: pic8_sdcard.h
pic8-sdcard/src/: pic8_sdcard.c
pic8-sdcard/tests/: test_pic8_sdcard.c
pic8-serial/: CMakeLists.txt  README.md
pic8-serial/docs/: API.md  ARCHITECTURE.md
pic8-serial/examples/: example_serial.c  example_serial_target.c
pic8-serial/include/: pic8_serial.h
pic8-serial/src/: pic8_serial.c
pic8-settings/: CMakeLists.txt  README.md
pic8-settings/docs/: API.md  ARCHITECTURE.md
pic8-settings/examples/: example_settings.c
pic8-settings/include/: pic8_settings.h
pic8-settings/mcu/: target_sizecheck.c
pic8-settings/src/: pic8_settings.c
pic8-settings/tests/: test_settings.c
pic8-taskmgr/: CMakeLists.txt  README.md
pic8-taskmgr/docs/: API.md  ARCHITECTURE.md
pic8-taskmgr/examples/: example_timer_reset.c
pic8-taskmgr/include/: task_manager.h
pic8-taskmgr/src/: task_manager.c
pic8-tick/: CMakeLists.txt  README.md
pic8-tick/docs/: API.md  ARCHITECTURE.md
pic8-tick/examples/: example_tick.c
pic8-tick/include/: pic8_tick.h
pic8-tick/src/: pic8_tick.c
pic8-usb/: CMakeLists.txt  README.md
pic8-usb/docs/: API.md  ARCHITECTURE.md
pic8-usb/examples/: example_usb_echo.c
pic8-usb/include/: pic8_usb.h  pic8_usb_test_support.h
pic8-usb/src/: pic8_usb.c  pic8_usb_host_stub.c  usb_config.h  usb_descriptors.c
pic8-usb/tests/: test_pic8_usb.c
(+172 files in other folders)
