# pic8-adcfilter, vendor-agnostic ADC oversampling + moving-average filter.
#
#   cmake -B build && cmake --build build
#   ctest --test-dir build --output-on-failure
#
# The core (src/pic8_adcfilter.c) has ZERO hardware dependency: it includes
# only <stdint.h> and takes a read callback, so it compiles and tests on the
# host with no HAL family selection at all. Only the optional HAL example
# (examples/example_adcfilter_hal.c) pulls in a HAL family for the real ADC
# read, exactly the way pic8-fsm's taskmgr-integration example is the one
# thing in that module needing a family choice.
#
#   cmake -B build -DPIC8_ADCFILTER_BUILD_HAL_EXAMPLE=ON   # builds the example

cmake_minimum_required(VERSION 3.16)
project(pic8_adcfilter C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_library(adcfilter STATIC src/pic8_adcfilter.c)
target_include_directories(adcfilter PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include)

enable_testing()
add_executable(test_adcfilter tests/test_adcfilter.c)
target_link_libraries(test_adcfilter PRIVATE adcfilter)
add_test(NAME adcfilter_tests COMMAND test_adcfilter)

# Optional: HAL example (links a HAL family for the ADC read callback).
option(PIC8_ADCFILTER_BUILD_HAL_EXAMPLE
       "Build examples/example_adcfilter_hal.c against a real HAL ADC" OFF)

if(PIC8_ADCFILTER_BUILD_HAL_EXAMPLE)
    set(HAL_FAMILY "PIC16" CACHE STRING "HAL family: PIC16 or PIC18")
    if(HAL_FAMILY STREQUAL "PIC18")
        set(HAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../pic18fxx5x-hal CACHE PATH "")
        set(HAL_LIB pic18fxx5x_hal)
        set(DEFAULT_DEVICE PIC18F4550)
    else()
        set(HAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../pic16f87xa-hal CACHE PATH "")
        set(HAL_LIB pic16f87xa_hal)
        set(DEFAULT_DEVICE PIC16F877A)
    endif()
    if(NOT TARGET ${HAL_LIB})
        add_subdirectory(${HAL_DIR} ${CMAKE_CURRENT_BINARY_DIR}/hal)
    endif()
    add_executable(example_adcfilter_hal examples/example_adcfilter_hal.c)
    target_compile_definitions(example_adcfilter_hal PRIVATE -D${DEFAULT_DEVICE})
    target_link_libraries(example_adcfilter_hal PRIVATE adcfilter ${HAL_LIB})
endif()