# pic8-settings, EEPROM-backed settings blobs with CRC validation.
#
#   cmake -B build && cmake --build build
#   ctest --test-dir build --output-on-failure
#   ./build/test_settings && ./build/example_settings
#
# One family-agnostic implementation (src/pic8_settings.c) builds against
# either HAL family. The public header is dependency-free; the implementation
# pulls the neutral HAL EEPROM API through pic8_hal.h. Select the family with
# -DHAL_FAMILY=PIC18 (default PIC16).

cmake_minimum_required(VERSION 3.16)
project(pic8_settings C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(HAL_FAMILY "PIC16" CACHE STRING "HAL family to link: PIC16 or PIC18")

if(HAL_FAMILY STREQUAL "PIC18")
    set(HAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../pic18fxx5x-hal
        CACHE PATH "Path to the pic18fxx5x-hal source tree")
    set(HAL_LIB         pic18fxx5x_hal)
    set(DEFAULT_DEVICE  PIC18F4550)
else()
    set(HAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../pic16f87xa-hal
        CACHE PATH "Path to the pic16f87xa-hal source tree")
    set(HAL_LIB         pic16f87xa_hal)
    set(DEFAULT_DEVICE  PIC16F877A)
endif()

if(NOT TARGET ${HAL_LIB})
    add_subdirectory(${HAL_DIR} ${CMAKE_CURRENT_BINARY_DIR}/hal)
endif()

add_library(pic8_settings STATIC src/pic8_settings.c)
target_include_directories(pic8_settings PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(pic8_settings PUBLIC ${HAL_LIB})
target_compile_definitions(pic8_settings PRIVATE -D${DEFAULT_DEVICE})

enable_testing()
add_executable(test_settings tests/test_settings.c)
target_compile_definitions(test_settings PRIVATE -D${DEFAULT_DEVICE})
target_link_libraries(test_settings PRIVATE pic8_settings)
add_test(NAME settings_tests COMMAND test_settings)

add_executable(example_settings examples/example_settings.c)
target_compile_definitions(example_settings PRIVATE -D${DEFAULT_DEVICE})
target_link_libraries(example_settings PRIVATE pic8_settings)
